--- a/fp2.html
+++ b/fp2.html
@@ -31,5 +31,9 @@
 		In our work, we plan on working with all of the attributes, with the exception of the dimensions.
 	</p>
 	<p><STRONG>NEED TO ADD EXAMPLE</STRONG></p>
+	<hr/>
+	<h3>Source</h3>
+	<br>
+	Stefko, Kat. "Re: Questions on Furbish project." Recieved by Sophia Ardell, 11 Nov. 2016.
 </body>
 </html>
