Added example table

--- a/fp2.html
+++ b/fp2.html
@@ -28,8 +28,69 @@
 		In addition to these, each entry can have up to 9 sets that indicate the location and year that the specimen was documented.
 	</p>
 	<p>
-		In our work, we plan on working with all of the attributes, with the exception of the dimensions.
+		In our work, we plan on working with all of the attributes, with the exception of the dimensions. Here is a sample of what the dataset looks like:
 	</p>
-	<p><STRONG>NEED TO ADD EXAMPLE</STRONG></p>
+	<table border="1">
+		<tr>
+			<th>Volume</th>
+			<th>Page</th>
+			<th>KF Scientific Name</th>
+			<th>KF Scientific Name</th>
+			<th>AH Scientific Name</th>
+			<th>AH Common Name</th>
+			<th>Dimensions (hxw, cm)</th>
+			<th>Place Name-1</th>
+			<th>Year-1</th>
+			<th>Place Name-2</th>
+			<th>Year-2</th>
+			<th>Place Name-3</th>
+			<th>Year-3</th>
+		</tr>
+		<tr>
+			<td>1</td>
+			<td>1</td>
+			<td>Clematis verticillaris DC</td>
+			<td></td>
+			<td>Clematis occidentalis (Hornem) DC</td>
+			<td>purple virgin's-bower</td>
+			<td>38.1 x 27.1</td>
+			<td>Orono</td>
+			<td>1881</td>
+			<td>Fort Kent</td>
+			<td>1881</td>
+			<td></td>
+			<td></td>
+		</tr>
+		<tr>
+			<td>1</td>
+			<td>3</td>
+			<td>Clematis virginiana L</td>
+			<td></td>
+			<td>Clematis virginiana L</td>
+			<td>Virginia virgin's-bower</td>
+			<td>38.1 x 29.1</td>
+			<td>Brunswick</td>
+			<td>nd</td>
+			<td>Topsham</td>
+			<td>nd</td>
+			<td>Orono</td>
+			<td>1891</td>
+		</tr>
+		<tr>
+			<td>1</td>
+			<td>4</td>
+			<td>Anemone multfida DC</td>
+			<td></td>
+			<td>Anemone multifida Poir</td>
+			<td>cut-leaved windflower</td>
+			<td>37.0 x 26.5</td>
+			<td>St. Francis</td>
+			<td>1881</td>
+			<td></td>
+			<td></td>
+			<td></td>
+			<td></td>
+		</tr>
+	</table>
 </body>
 </html>
