Added image + definitions

--- a/fp2.html
+++ b/fp2.html
@@ -14,11 +14,27 @@
 	<p>
 	Our dataset is the Kate Furbish Collection. In our dataset, each row represents an entry that is on a specific page in a volume of the collection of her illustrations. Each of these entries has 5 categorial attributes:
 	<ul>
-		<li>Volume</li>
+		<li>Volume: </li>
+			<ul>
+				<li> This refers to the volume that the original painting appears in; Furbish bound her work into 14 volumes, titled Maine Flora, before giving it to Bowdoin in 1908 </li>
+			</ul>
 		<li>KF Scientific Name</li>
+			<ul>
+				<li> Original scientific name assigned by Furbish when she created the image </li>
+			</ul>
 		<li>KF Scientific Name [revised]</li>
+			<ul>
+				<li> The revised scientific name assigned by Furbish immediately before she gave Bowdoin the Maine Flora. This was almost always based on the 7th edition of Asa Gray’s Plants of North America. </li>
+			</ul>
 		<li>AH Scientic Name</li>
+			<ul>
+				<li> This is the current scientific name per the Arthur Haine’s flora novae angliae, which is the most definitive current guide to North American wildflowers. </li>
+			</ul>
 		<li>AH Common Name</li>
+			<ul>
+				<li> The current common name as assigned by Haines. </li>
+			</ul>
+
 	</ul>
 	</p>
 	<p>
