added footnote for picture

--- a/fp1.html
+++ b/fp1.html
@@ -16,7 +16,7 @@
 
 	<figure>
     <img src='pic.jpg' alight='right' alt="Bullhead pond lily, from “Plants and Flowers of Maine: Kate Furbish’s Watercolors”" width = "275" height = "275"/>
-    <figcaption>Bullhead pond lily, from “Plants and Flowers of Maine: Kate Furbish’s Watercolors”</figcaption>
+    <figcaption>Bullhead pond lily, from “Plants and Flowers of Maine: Kate Furbish’s Watercolors”.<sup><a href="#fn3" id="ref3">3</a></sup> </figcaption>
 	</figure>
 
 	<p>
@@ -55,6 +55,9 @@
 	<sup id="fn1">1. "Kate Furbish Collection, 1873- , N.d. (bulk 1873-1909) (Bowdoin." Library George J. Mitchell Department of Special Collections & Archives. N.p., n.d. Web. 13 Nov. 2016. <a href="#ref1" title="Jump back to footnote 1 in the text.">↩</a></sup>
 	<br>
 	<sup id="fn2">2. "Kate Furbish Collection, 1873- , N.d. (bulk 1873-1909) (Bowdoin." Library George J. Mitchell Department of Special Collections & Archives. N.p., n.d. Web. 13 Nov. 2016. <a href="#ref2" title="Jump back to footnote 2 in the text.">↩</a></sup>
+	<br>
+	<sup id="fn3">3. Cook, Doug. "Botanist Kate Furbish ‘Gets Her Due’ with Book of Flora Paintings." Bowdoin News. N.p., 12 Sept. 2016. Web. 14 Nov. 2016.<a href="#ref3" title="Jump back to footnote 3 in the text.">↩</a></sup>
+
 
 
 
