--- a/fp3.html
+++ b/fp3.html
@@ -48,7 +48,15 @@
 	<h3>Skills</h3>
 	<p>
 		<ul>
-			<li>Skillz</li>
+			<li> Geomapping </li>
+				<ul>
+					<li> Zoom </li>
+				</ul>	
+			<li> Slider </li>
+			<li> Sorting & Selection </li>
+			<li> Geomapping </li>
+			<li> Picture Display </li>
+			<li> Force Layout </li>
 		</ul>
 	</p>
 
