--- a/menu.html
+++ b/menu.html
@@ -6,5 +6,9 @@
 	<b> <a href="./fp1.html">Project Description</a></b>
 	<br>
 	<b> <a href="./fp2.html">Dataset Description</a></b>
+	<br>
+	<b> <a href="./fp3.html">Questions and interactions</a></b>
+	<br>
+	<b> <a href="./fp4.html">Goals</a></b>
 </body>
 </html>
