--- a/fp3.html
+++ b/fp3.html
@@ -30,7 +30,7 @@
 	<h3>Storyboarding for some of the possible questions</h3>
 	<img src="img/sketch.jpg" style="width: 700">
 	<p>
-		For our project, we're thinking about doing one "super-visualization" with many features. The main interface includes a map of Maine, a slider for selecting date ranges, a searchable dialog box, and a "town inspector" box. The goal of this visulization is to be able to explore where in Maine Furbish found specific flowers. By walking through each of the possible interactions, the functionality of each of these should become clear:
+		For our project, we're thinking about doing one "super-visualization" with many features. The main interface includes a map of Maine, a slider for selecting date ranges, a searchable dialog box, and a "town inspector" box. The goal of this visulization is to be able to explore when and where Furbish found specific flowers. By walking through each of the possible interactions, the functionality of each of these should become clear:
 	</p>
 	<ol>
 		<li>
@@ -43,21 +43,25 @@
 			If the user clicks on a town, the inspector box will populate with information about all of the checked flowers that have samples in that town. For each type of flower, the user will be able to see both the scientific and common names, the volume and pages in which it appears within the collection, the total number of samples, and the years in which the flower was sampled in that town.
 		</li>
 		<li>
-			Clicking on a town will also bring up a zoomed in image of the town
+			Clicking on a town will also bring up a zoomed in image of the town and the area around that the user can augment.
 		</li>
 	</ol>
 	<hr/>
 	<h3>Questions we have decided to pursue</h3>
 	<p>
 		<ul>
-			<li>Where did she go and when?</li>
-			<li>Where are certain plants located?</li>
-			<li>What were her most active years?</li>
-			<li>What places did she visit the most?</li>
-			<li>What were the most and least common plants?</li>
-			<li>Is there a way we can evaluate by genus instead of species?</li>
-			<li>Where in the collection is this flower (regarding page and volume number)?</li>
-			<li>Did her attention to detailed recording vary over time?</li>
+			<li>
+				Where did she go and when?
+				<ol><li>This can be seen through the year scale and the dots on the map</li></ol>
+			</li>
+			<li>
+				Where are certain plants located?
+				<ol><li>Seen through searching for plants and seeing where they appear</li></ol>
+			</li>
+			<li>
+				Where in the collection is this flower (regarding page and volume number)?
+				<ol><li>This information will appear in the town inspector box</li></ol>
+			</li>
 		</ul>
 	</p>
 
