--- a/fp4.html
+++ b/fp4.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>FP3: Questions and interactions</title>
+	<title>FP4: Define Your Goals</title>
 	<link rel="stylesheet" type="text/css" href="stylesheet.css">
 </head>
 <body>
@@ -17,7 +17,32 @@
 	</ul>
 	<hr/>
 	<h3>Goals by date</h3>
-	This is a blasst!
+	<ul>
+		<li>Week 1 (Nov. 13-19)
+			<ul>
+				<li>subgoal!</li>
+			</ul>
+		</li>
+		<li>Week 2 (Nov. 20-26)
+			<ul>
+				<li>subgoal!</li>
+			</ul>
+		</li>
+		<li>Week 3 (Nov. 27 - Dec. 3)
+			<ul>
+				<li>subgoal!</li>
+			</ul>
+		</li>
+		<li>Week 4 (Dec. 4-10)
+			<ul>
+				<li>subgoal!</li>
+			</ul>
+		</li>
+		<li>Week 5 (Dec. 11-18)
+			<ul>
+				<li>subgoal!</li>
+			</ul>
+		</li>
 	<br>
 	
 </body>
