Began creating individual contribution table

--- a/fp5.html
+++ b/fp5.html
@@ -20,23 +20,28 @@
 	<ul>
 		<li></li>
 	</ul>
+	<hr/>
 	<h3>New Questions/Issues:</h3>
 	<ul>
 		<li>All of them! It's our first week!</li>
 	</ul>
+	<hr/>
 	<h3>Most Immediate Goals for the Following Week:</h3>
 	<ul>
 		<li></li>
 	</ul>
+	<hr/>
 	<h3>Accounting for Individual Contributions:</h3>
 	<table>
+		<tr>
+			<th>Task</th>
+			<th>Sophie</th>
+			<th>Marcus</th>
+			<th>Tucker</th>
+		</tr>
 		<tr>
 			
 		</tr>
 	</table>
-	<hr/>
-	<hr/>
-	<hr/>
-	<hr/>
 </body>
 </html>
