--- a/fp4.html
+++ b/fp4.html
@@ -17,32 +17,32 @@
 	</ul>
 	<hr/>
 	<h3>Goals by date</h3>
-	<ul>
-		<li>Week 1 (Nov. 13-19)
-			<ul>
-				<li>subgoal!</li>
-			</ul>
-		</li>
-		<li>Week 2 (Nov. 20-26)
-			<ul>
-				<li>subgoal!</li>
-			</ul>
-		</li>
-		<li>Week 3 (Nov. 27 - Dec. 3)
-			<ul>
-				<li>subgoal!</li>
-			</ul>
-		</li>
-		<li>Week 4 (Dec. 4-10)
-			<ul>
-				<li>subgoal!</li>
-			</ul>
-		</li>
-		<li>Week 5 (Dec. 11-18)
-			<ul>
-				<li>subgoal!</li>
-			</ul>
-		</li>
+	<strong>Week 1 (Nov. 13-19)</strong>
+		<ul>
+			<li>Clean data (get rid of typos)</li>
+			<li>Read in data</li>
+		</ul>
+	<br>
+	<strong>Week 2 (Nov. 20-26)</strong>
+		<ul>
+			<li>subgoal!</li>
+		</ul>
+	<br>
+	<strong>Week 3 (Nov. 27 - Dec. 3)</strong>
+		<ul>
+			<li>subgoal!</li>
+		</ul>	
+	<br>
+	<strong>Week 4 (Dec. 4-10)</strong>
+		<ul>
+			<li>subgoal!</li>
+		</ul>		
+	<br>
+	<strong>Week 5 (Dec. 11-18)</strong>
+		<ul>
+			<li>subgoal!</li>
+		</ul>
+		
 	<hr/>
 	
 </body>
