--- a/fp4.html
+++ b/fp4.html
@@ -19,31 +19,43 @@
 	<h3>Goals by date</h3>
 	<strong>Week 1 (Nov. 13-19)</strong>
 		<ul>
+			<li>Brainstorm questions and visualizations</li>
+			<li>Write write-ups</li>
 			<li>Clean data (get rid of typos)</li>
 			<li>Read in data</li>
+			<li>Communicate plans/ideas for visualizations with Kat</li>
 		</ul>
 	<br>
 	<strong>Week 2 (Nov. 20-26)</strong>
 		<ul>
-			<li>subgoal!</li>
+			<li>Finish parsing data</li>
+			<li>Sophie and Marcus create map of Maine with dots on towns</li>
+			<li>Marcus adds in slider (should be just copy and pasting)</li>
+			<li>Tucker looks for search mechanisms and starts trying to implement one</li>
 		</ul>
 	<br>
 	<strong>Week 3 (Nov. 27 - Dec. 3)</strong>
 		<ul>
-			<li>subgoal!</li>
+			<li>Tucker finishes search box functionality</li>
+			<li>Sophie and Marcus get zoom functionality to work</li>
+			<li>Start week 4 tasks if possible</li>
 		</ul>	
 	<br>
 	<strong>Week 4 (Dec. 4-10)</strong>
 		<ul>
-			<li>subgoal!</li>
+			<li>Integrate search box with map visualization</li>
+			<li>Build town inspection box and integrate with map and search box</li>
+			<li>Prepare presentation</li>
 		</ul>		
 	<br>
 	<strong>Week 5 (Dec. 11-18)</strong>
 		<ul>
-			<li>subgoal!</li>
+			<li>Implement feedback from classmates</li>
+			<li>Make dots increase in size to reflect aggreate data</li>
+			<li>Finish inspection box</li>
+			<li>Debug and clean code</li>
+			<li>Make everything look better!</li>
 		</ul>
-		
 	<hr/>
-	
 </body>
 </html>
