Tentatively finished this week's fp5

--- a/fp4.html
+++ b/fp4.html
@@ -13,7 +13,7 @@
 	<hr/>
 	<h3>Visualizations we hope to create by the end of the semester</h3>
 	<ul>
-		<li>Map</li>
+		<li>Our super <a href="./FP3.html">map visualization (see FP3)</a></li>
 	</ul>
 	<hr/>
 	<h3>Goals by date</h3>
