--- a/fp5.html
+++ b/fp5.html
@@ -28,7 +28,9 @@
 	<hr/>
 	<h3>Most Immediate Goals for the Following Week:</h3>
 	<ul>
-		<li></li>
+		<li>Cleaning data</li>
+		<li>Reading in data</li>
+		<li>Communicating plans/ideas for visualizations with Kat</li>
 	</ul>
 	<hr/>
 	<h3>Accounting for Individual Contributions:</h3>
@@ -40,7 +42,16 @@
 			<th>Tucker</th>
 		</tr>
 		<tr>
-			
+			<td>Brainstorm questions and visualizations</td>
+			<td>33%</td>
+			<td>33%</td>
+			<td>33%</td>
+		</tr>
+		<tr>
+			<td>Writing write-ups</td>
+			<td>33%</td>
+			<td>33%</td>
+			<td>33%</td>
 		</tr>
 	</table>
 </body>
