--- a/menu.html
+++ b/menu.html
@@ -10,5 +10,7 @@
 	<b> <a href="./fp3.html">Questions and interactions</a></b>
 	<br>
 	<b> <a href="./fp4.html">Goals</a></b>
+	<br>
+	<b> <a href="./fp5.html">Final Project Progress Report</a></b>
 </body>
 </html>
