--- a/fp3.html
+++ b/fp3.html
@@ -28,7 +28,7 @@
 
 	<hr/>
 	<h3>Storyboarding for some of the possible questions</h3>
-	<img src="img/sketch.jpg" style="width: 700">
+	<center><img src="img/sketch.jpg" style="width: 700"></center>
 	<p>
 		For our project, we're thinking about doing one "super-visualization" with many features. The main interface includes a map of Maine, a slider for selecting date ranges, a searchable dialog box, and a "town inspector" box. The goal of this visulization is to be able to explore where in Maine Furbish found specific flowers. By walking through each of the possible interactions, the functionality of each of these should become clear:
 	</p>
@@ -67,13 +67,46 @@
 		<ul>
 			<li> Geomapping </li>
 				<ul>
-					<li> Zoom </li>
-				</ul>	
+					<li> 
+						The main visualization of our project is an interactive map of Maine, and therefore the most important skill we have to learn is Geomapping. We will be learning and implementing techniques from Scott Murray’s textbook chapter “Geomapping”. Here, we will be learning about GeoJSON, paths and projections.
+					</li>
+				</ul>
+			<li> Zoomed In View Box </li>
+				<ul>
+					<li> 
+						Another feature we want to implement is the zoomed in view of the town. We will need to learn how to create a seperate SVG which displays the zoomed in view of the map of Maine. We will learn how to transform the map of Maine to zoom in on specific towns on the map.
+					</li>
+				</ul>
 			<li> Slider </li>
-			<li> Sorting & Selection </li>
+				<ul>
+					<li> 
+						We are also interested answering 
+					</li>
+				</ul>
+			<li> Searching and Sorting </li>
+				<ul>
+					<li> 
+						The main visualization of our project is an interactive map of Maine, and therefore the most important skill we have to learn is Geomapping. We will be learning and implementing techniques from Scott Murray’s textbook chapter “Geomapping”. Here, we will be learning about GeoJSON, paths and projections.
+					</li>
+				</ul>
 			<li> Geomapping </li>
+				<ul>
+					<li> 
+						The main visualization of our project is an interactive map of Maine, and therefore the most important skill we have to learn is Geomapping. We will be learning and implementing techniques from Scott Murray’s textbook chapter “Geomapping”. Here, we will be learning about GeoJSON, paths and projections.
+					</li>
+				</ul>
 			<li> Picture Display </li>
+				<ul>
+					<li> 
+						The main visualization of our project is an interactive map of Maine, and therefore the most important skill we have to learn is Geomapping. We will be learning and implementing techniques from Scott Murray’s textbook chapter “Geomapping”. Here, we will be learning about GeoJSON, paths and projections.
+					</li>
+				</ul>
 			<li> Force Layout </li>
+				<ul>
+					<li> 
+						The main visualization of our project is an interactive map of Maine, and therefore the most important skill we have to learn is Geomapping. We will be learning and implementing techniques from Scott Murray’s textbook chapter “Geomapping”. Here, we will be learning about GeoJSON, paths and projections.
+					</li>
+				</ul>
 		</ul>
 	</p>
 
