Made changes to FP5

--- a/fp4.html
+++ b/fp4.html
@@ -22,7 +22,7 @@
 			<li>Brainstorm questions and visualizations</li>
 			<li>Write write-ups</li>
 			<li>Clean data (get rid of typos)</li>
-			<li>Read in data</li>
+			<li>Read in and parse data</li>
 			<li>Communicate plans/ideas for visualizations with Kat</li>
 		</ul>
 	<br>
