added link to geomapping

--- a/fp6.html
+++ b/fp6.html
@@ -56,7 +56,7 @@
 	<h3>Existing D3 layouts that we will use</h3>
 	<p>
 		<ol>
-			<li>Geomapping</li>
+			<li><a href="https://vida.io/documents/s5qo5Gwrct5HNxAD2">Geomapping</a></li>
 		</ol>
 		(Note that we will also be doing a lot of other functionality that will use D3 (i.e. dialog boxes, zooming in, etc.), but Geomapping is the only actual layout that we will be using)
 	</p>
