--- a/fp6.html
+++ b/fp6.html
@@ -12,9 +12,9 @@
 	<h3>Kate Furbish Collection</h3>
 	<hr/>
 	<h3>Descriptions of Project and Data</h3>
-	<a href="./fp1">Project Description</a>
+	<a href="./fp1.html">Project Description</a>
 	<br>
-	<a href="./fp2">Dataset Description</a>
+	<a href="./fp2.html">Dataset Description</a>
 	<hr/>
 	<h3>Questions that can be answered using planned interactions</h3>
 	<p>
@@ -56,7 +56,11 @@
 	<h3>Existing D3 layouts that we will use</h3>
 	<p>
 		<ol>
-			<li><a href="https://vida.io/documents/s5qo5Gwrct5HNxAD2">Geomapping</a></li>
+			<li>Geomapping</a></li>
+			<ol>
+				<li><a href="http://techslides.com/demos/d3/us/me.html">Example 1</a></li>
+				<li><a href="https://vida.io/documents/s5qo5Gwrct5HNxAD2">Example 2</a></li>
+			</ol>
 		</ol>
 		(Note that we will also be doing a lot of other functionality that will use D3 (i.e. dialog boxes, zooming in, etc.), but Geomapping is the only actual layout that we will be using)
 	</p>
@@ -104,7 +108,7 @@
 	</p>
 	<hr/>
 	<h3>Implementation Path:</h3>
-	<a href="./fp4">What we are going to work on implementing in what order</a>
+	<a href="./fp4.html">What we are going to work on implementing in what order</a>
 	<h3>Source</h3>
 	<ul>
 		<li> Stefko, Kat. "Re: Questions on Furbish project." Recieved by Sophia Ardell, 11 Nov. 2016. </li>
