added information to what we've done in the past week

--- a/fp7.html
+++ b/fp7.html
@@ -19,10 +19,15 @@
 	<hr/>
 	<h3>Progress on Goals:</h3>
 	<ul>
-		<li>Had a very productive meeting with Kat Stefko</li>
+		<li>Very productive meeting with Kat Stefko</li>
+		<ul>
+			<li>We discussed the current questions we were asking to see if she thought they were all relevant, and if there was anything we missed. She was satisfied, though had some additional questions that the dataset didn't have the capacity to examine (e.g. what path did Kate Furbish take) or wouldn't be best shown in a dynamic visualization (e.g. how did Kate Furbish's level of meticulousness vary over the years in her records).</li>
+			<li>We showed her our current design to see if this tool would optimally facilitate her research from a historian point of view. She is not able to offer a botanist point of view as she is a Special Collections librarian, but if we have more questions about the horticultural point of view, she is happy to connect us with staff at the Maine Botanical Gardens. She found our visualization satisfactory.</li>
+			<li>She gave us some of Furbish's drawings in case we want to include them in our visualization.</li>
+		</ul>
 		<li>Cleaning data</li>
 			<ul> 
-				<li> Looking through the data, we have found several instances of misspellings and inconsistencies in how certain types of information are written (several different people have been involved in transfering Kate Furbish's work to an excel file, and they have used different methods to record that information). We want to go through the existing data and make changes to any misspellings and standardize how the information is recorded. This will allow us to parse the data much more easily and succesfully. </li>
+				<li>Looking through the data, we have found hundreds instances of misspellings, gaps, and inconsistencies in how certain types of information are written (several different people have been involved in transfering Kate Furbish's work to an excel file, and they have used different methods to record that information). Due to the uniqueness of most of the errors, we had to go through the existing data by hand, making changes to any misspellings and standardizing how the information is recorded. This will allow us to parse the data much more easily and succesfully.</li>
 			</ul>
 	</ul>
 	<hr/>
