added information to what we've done in the past week

--- a/fp7.html
+++ b/fp7.html
@@ -28,19 +28,11 @@
 		<li>Cleaning data</li>
 			<ul> 
 				<li>Looking through the data, we have found hundreds instances of misspellings, gaps, and inconsistencies in how certain types of information are written (several different people have been involved in transfering Kate Furbish's work to an excel file, and they have used different methods to record that information). Due to the uniqueness of most of the errors, we had to go through the existing data by hand, making changes to any misspellings and standardizing how the information is recorded. This will allow us to parse the data much more easily and succesfully.</li>
+				<li>We weren't expecting the dataset to need so much modification, so as she cleaned it, Sophie created 5 different versions of the file so the original was preserved and changes could be tracked easily.</li>
 			</ul>
-	</ul>
-	<hr/>
-	<h3>New Questions/Issues:</h3>
-	<ul>
-		<li>All of them! It's our first week!</li>
-	</ul>
-	<hr/>
-	<h3>Most Immediate Goals for the Following Week:</h3>
-	<ul>
 		<li>Reading in and parsing data</li>
 		<ul> 
-			<li> As this is a large data set, we are going to need to write a script that will parse the data and organize it in a format that we can use during the project. We are thinking of creating both flower and town structs to store the data, so during the parsing process, we will be creating a new instance of a flower struct whenever we encounter a new species of flora and a new instance of a town struct when we encounter a new town. To the flower struct, we will append:
+			<li> As this is a large data set, we wrote a script that will parse the data and organize it in a format that we can use during the project. We are thinking of creating both flower and town structs to store the data, so during the parsing process, we will be creating a new instance of a flower struct whenever we encounter a new species of flora and a new instance of a town struct when we encounter a new town. To the flower struct, we will append:
 			
 			<ul>
 				<li> The volume it was found in, and on what page it was found. </li>
@@ -65,6 +57,16 @@
 
 			</li> 
 		</ul>
+	</ul>
+	<hr/>
+	<h3>New Questions/Issues:</h3>
+	<ul>
+		<li>So far so good!</li>
+	</ul>
+	<hr/>
+	<h3>Most Immediate Goals for the Following Week:</h3>
+	<ul>
+		
 		<li>Communicating plans/ideas for visualizations with Kat</li>
 		<ul> <li> As we are creating a visualization for a specific person, we want to contact this person again and discuss what they would like out of this visualization so that we can tailor our visualization to suit their needs. </li> </ul>
 	</ul>
