added things to do for the next week

--- a/fp7.html
+++ b/fp7.html
@@ -66,10 +66,11 @@
 	<hr/>
 	<h3>Most Immediate Goals for the Following Week:</h3>
 	<ul>
-		
-		<li>Communicating plans/ideas for visualizations with Kat</li>
-		<ul> <li> As we are creating a visualization for a specific person, we want to contact this person again and discuss what they would like out of this visualization so that we can tailor our visualization to suit their needs. </li> </ul>
-	</ul>
+			<li>Finish parsing data</li>
+			<li>Sophie and Marcus create map of Maine with dots on towns</li>
+			<li>Marcus adds in slider (should be just copy and pasting)</li>
+			<li>Tucker looks for search mechanisms and starts trying to implement one</li>
+		</ul>
 	<hr/>
 	<h3>Accounting for Individual Contributions:</h3>
 	<table>
