--- a/fp5.html
+++ b/fp5.html
@@ -12,9 +12,9 @@
 	<h3>Kate Furbish Collection</h3>
 	<hr/>
 	<h3>Goals for Completing the Project:</h3>
-	<ul>
-		<li></li>
-	</ul>
+
+	<p> Link to our week by week <a href="./FP4.html"> project implementation timeline</a> . </p>
+	
 	<hr/>
 	<h3>Progress on Goals:</h3>
 	<ul>
