added a link and a new question for this week

--- a/fp7.html
+++ b/fp7.html
@@ -14,7 +14,7 @@
 	<hr/>
 	<h3>Goals for Completing the Project:</h3>
 	<ul>
-		<li></li>
+		<li><a href="./fp4.html">Link to goals</a></li>
 	</ul>
 	<hr/>
 	<h3>Progress on Goals:</h3>
@@ -61,7 +61,7 @@
 	<hr/>
 	<h3>New Questions/Issues:</h3>
 	<ul>
-		<li>So far so good!</li>
+		<li>Is it possible to get images of the flowers to learn when the user selects one? After our conversation with Kat, it seems like this actually could be possible, though it might be out of the scope of this project.</li>
 	</ul>
 	<hr/>
 	<h3>Most Immediate Goals for the Following Week:</h3>
