--- a/parseTest.html
+++ b/parseTest.html
@@ -6,6 +6,6 @@
 	<script type="text/javascript" src="https://d3js.org/d3.v3.min.js"></script>
 </head>
 <body>
-<script type="text/javascript" src="parse.js"></script>
+<script type="text/javascript" src="js/parse.js"></script>
 </body>
 </html>
