added newest menu files

--- a/menu.html
+++ b/menu.html
@@ -11,6 +11,10 @@
 	<br>
 	<b> <a href="./fp4.html">Goals</a></b>
 	<br>
-	<b> <a href="./fp5.html">Final Project Progress Report</a></b>
+	<b> <a href="./fp5.html">Week 1 Progress Report</a></b>
+	<br>
+	<b> <a href="./fp6.html">Implementation Path</a></b>
+	<br>
+	<b> <a href="./fp7.html">Week 2 Progress Report</a></b>
 </body>
 </html>
