started working on searchable list

--- a/searchDialogTest.html
+++ b/searchDialogTest.html
@@ -3,9 +3,23 @@
 	<meta charset="utf-8">
 	<title>Search Dialog Test</title>
 	<link rel="stylesheet" type="text/css" href="stylesheet.css">
-	<script type="text/javascript" src="https://d3js.org/d3.v3.min.js"></script>
+	<script type="text/javascript" src="js/list.min.js"></script>
+	<script type="text/javascript" src="list.fuzzysearch.min.js"></script>
+	<script type="text/javascript" src="js/parsedFurbishData.js"></script>
+	<script type="text/javascript" src="searchDialogTest.js"></script>
+	<!-- <script type="text/javascript" src="https://d3js.org/d3.v3.min.js"></script> -->
 </head>
 <body>
-<script type="text/javascript" src="js/parse.js"></script>
+
+<div id="floraList">
+	<ul class="list">
+		<li>
+			<h3 class="sciName"></h3>
+			<p class="comName"></p>
+		</li>
+	</ul>
+</div>
+
+
 </body>
 </html>
