--- a/searchDialogTest.html
+++ b/searchDialogTest.html
@@ -38,17 +38,23 @@
 </head>
 <body>
 
-<div id="sciSearchContainer">
-	<input type="text" id="sciSearchBar" onkeyup="searchFlora()" placeholder="Search for flora by scientific name.." title="Type in a flora">
-	<div id="sciSearchResults">
-		<div id='noResultMsg' style="display: none">No Results</div>
-		<ul id="sciList"></ul>
-	</div>
-	<div id="sciSearchSelected">
-		<ul id="sciSelectedList"></ul>
+<div id="searchContainer">
+	<ul class="tab">
+	  <li><a href="javascript:void(0)" class="tablinks" onclick="openTab(event, 'sciSearchContainer')">Scientific Name</a></li>
+	  <li><a href="javascript:void(0)" class="tablinks" onclick="openTab(event, 'sciSearchContainer')">Common Name</a></li>
+	</ul>
+
+	<div id="sciSearchContainer" class="tabcontent">
+		<input type="text" id="sciSearchBar" onkeyup="searchFlora()" placeholder="Search for flora by scientific name.." title="Type in a flora">
+		<div id="sciSearchResults">
+			<div id='noResultMsg' style="display: none">No Results</div>
+			<ul id="sciList"></ul>
+		</div>
+		<div id="sciSearchSelected">
+			<ul id="sciSelectedList"></ul>
+		</div>
 	</div>
 </div>
-
 
 <script type="text/javascript" src="searchDialogTest.js"></script>
 
