default to sci tab

--- a/searchDialogTest.html
+++ b/searchDialogTest.html
@@ -40,7 +40,8 @@
 
 <div id="searchContainer">
 	<ul class="tab">
-	  <li><a href="javascript:void(0)" class="tablinks" onclick="openTab(event, 'sciSearchContainer')">Scientific Name</a></li>
+	  <li><a href="javascript:void(0)" class="tablinks" onclick="openTab(event, 'sciSearchContainer')"
+  			id="defaultOpen">Scientific Name</a></li>
 	  <li><a href="javascript:void(0)" class="tablinks" onclick="openTab(event, 'sciSearchContainer')">Common Name</a></li>
 	</ul>
 
