going to try eliminating tabs

--- a/searchDialogTest.html
+++ b/searchDialogTest.html
@@ -55,6 +55,17 @@
 			<ul id="sciSelectedList"></ul>
 		</div>
 	</div>
+	<div id="comSearchContainer" class="tabcontent">
+		<input type="text" id="comSearchBar" onkeyup="searchFlora()" placeholder="Search for flora by common name.." title="Type in a flora">
+		<div id="comSearchResults">
+			<div id='noResultMsg' style="display: none">No Results</div>
+			<ul id="comList"></ul>
+		</div>
+		<div id="comSearchSelected">
+			<ul id="comSelectedList"></ul>
+		</div>
+	</div>
+
 </div>
 
 <script type="text/javascript" src="searchDialogTest.js"></script>
