--- a/searchDialogTest.html
+++ b/searchDialogTest.html
@@ -39,13 +39,13 @@
 <body>
 
 <div id="searchContainer">
-	<ul class="tab">
+<!-- 	<ul class="tab">
 	  <li><a href="javascript:void(0)" class="tablinks" onclick="openTab(event, 'sciSearchContainer')"
   			id="defaultOpen">Scientific Name</a></li>
 	  <li><a href="javascript:void(0)" class="tablinks" onclick="openTab(event, 'sciSearchContainer')">Common Name</a></li>
-	</ul>
+	</ul> -->
 
-	<div id="sciSearchContainer" class="tabcontent">
+	<!-- <div id="sciSearchContainer" class="tabcontent"> -->
 		<input type="text" id="sciSearchBar" onkeyup="searchFlora()" placeholder="Search for flora by scientific name.." title="Type in a flora">
 		<div id="sciSearchResults">
 			<div id='noResultMsg' style="display: none">No Results</div>
@@ -54,8 +54,8 @@
 		<div id="sciSearchSelected">
 			<ul id="sciSelectedList"></ul>
 		</div>
-	</div>
-	<div id="comSearchContainer" class="tabcontent">
+	<!-- </div> -->
+	<!-- <div id="comSearchContainer" class="tabcontent">
 		<input type="text" id="comSearchBar" onkeyup="searchFlora()" placeholder="Search for flora by common name.." title="Type in a flora">
 		<div id="comSearchResults">
 			<div id='noResultMsg' style="display: none">No Results</div>
@@ -64,7 +64,7 @@
 		<div id="comSearchSelected">
 			<ul id="comSelectedList"></ul>
 		</div>
-	</div>
+	</div> -->
 
 </div>
 
